--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,13 @@ body {
     display: none;
 }
 
+#pokemon {
+    width: 100%;
+    transform: rotate(0deg);
+}
+
 #pokemons {
-    scale: 100%;
+    width: 100%;
     padding-top: 30px;
     justify-content: center;
     text-align: center;
@@ -53,4 +58,20 @@ body {
     grid-row: inherit;
     display: grid;
     grid-template-columns: 50% 50%;
+}
+
+#inne {
+    padding: 20px;
+    text-align: center;
+    justify-content: center;
+    grid-row: inherit;
+    display: grid;
+    grid-template-columns: 20% 20%;
+}
+
+.in {
+    background-color: rgb(157, 3, 3);
+    margin: 20px;
+    border-radius: 30px;
+    border: black solid;
 }
