--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,75 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:600&display=swap');
 body {
-    background-color: rgba(255, 255, 0, 0.827);
+	background: linear-gradient(-45deg, #ee7752, #e73c3c, #d2d523, #d5b423);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+.boody{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background:#fff;
+}
+span{
+  position: relative;
+  display: inline-flex;
+  width: 180px;
+  height: 55px;
+  margin: 0 15px;
+  perspective: 1000px;
+}
+span a{
+  font-size: 19px;
+  letter-spacing: 1px;
+  transform-style: preserve-3d;
+  transform: translateZ(-25px);
+  transition: transform .25s;
+  font-family: 'Montserrat', sans-serif;
+  
+}
+span a:before,
+span a:after{
+  position: absolute;
+  content: "next";
+  height: 55px;
+  width: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 5px solid black;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+span a:before{
+  color: #fff;
+  background: #000;
+  transform: rotateY(0deg) translateZ(25px);
+}
+span a:after{
+  color: #000;
+  transform: rotateX(90deg) translateZ(25px);
+}
+span a:hover{
+  transform: translateZ(-25px) rotateX(-90deg);
+}
+
+
 
 #nav {
     margin: 0px;
@@ -30,12 +99,20 @@ body {
     text-align: center;
     display: block;
 }
+#prev{
+  top: 40px;
+  padding-top: 50px;
+}
 
 #next {
     display: block;
     justify-content: center;
     text-align: center;
-    scale: 100%;
+    scale: 100%;   
+}
+#nxt{
+  top: 40px;
+  padding-top: 50px;
 }
 
 #previous {
@@ -59,19 +136,25 @@ body {
     display: grid;
     grid-template-columns: 50% 50%;
 }
-
-#inne {
+.zdjecie img{
+  height: 300px;
+  width: 900px;
+}
+.dupa {
+  animation-duration: 1s;
+}
+/* #inne {
     padding: 20px;
     text-align: center;
     justify-content: center;
     grid-row: inherit;
     display: grid;
     grid-template-columns: 20% 20%;
-}
+} */
 
-.in {
+/* .in {
     background-color: rgb(157, 3, 3);
     margin: 20px;
     border-radius: 30px;
     border: black solid;
-}
+} */
