--- a/src/style.css
+++ b/src/style.css
@@ -1,75 +1,79 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600&display=swap');
 body {
-	background: linear-gradient(-45deg, #ee7752, #e73c3c, #d2d523, #d5b423);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100vh;
+    background: linear-gradient(-45deg, #ee7752, #e73c3c, #d2d523, #d5b423);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-.boody{
-  margin: 0;
-  padding: 0;
-  display: flex;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
-  background:#fff;
-}
-span{
-  position: relative;
-  display: inline-flex;
-  width: 180px;
-  height: 55px;
-  margin: 0 15px;
-  perspective: 1000px;
-}
-span a{
-  font-size: 19px;
-  letter-spacing: 1px;
-  transform-style: preserve-3d;
-  transform: translateZ(-25px);
-  transition: transform .25s;
-  font-family: 'Montserrat', sans-serif;
-  
-}
-span a:before,
-span a:after{
-  position: absolute;
-  content: "next";
-  height: 55px;
-  width: 180px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 5px solid black;
-  box-sizing: border-box;
-  border-radius: 5px;
-}
-span a:before{
-  color: #fff;
-  background: #000;
-  transform: rotateY(0deg) translateZ(25px);
-}
-span a:after{
-  color: #000;
-  transform: rotateX(90deg) translateZ(25px);
-}
-span a:hover{
-  transform: translateZ(-25px) rotateX(-90deg);
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
+.boody {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+}
 
+#nxt {
+    position: relative;
+    display: inline-flex;
+    width: 180px;
+    height: 55px;
+    margin: 0 15px;
+    perspective: 1000px;
+}
+
+#nxt {
+    font-size: 19px;
+    letter-spacing: 1px;
+    transform-style: preserve-3d;
+    transform: translateZ(-10px);
+    transition: transform .25s;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#nxt:before,
+#nxt:after {
+    position: absolute;
+    content: "next";
+    height: 55px;
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 5px solid black;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+#nxt:before {
+    color: #fff;
+    background: #000;
+    transform: rotateY(0deg) translateZ(25px);
+}
+
+#nxt:after {
+    color: #000;
+    transform: rotateX(90deg) translateZ(25px);
+}
+
+#nxt:hover {
+    transform: translateZ(-25px) rotateX(-90deg);
+}
 
 #nav {
     margin: 0px;
@@ -99,20 +103,22 @@ span a:hover{
     text-align: center;
     display: block;
 }
-#prev{
-  top: 40px;
-  padding-top: 50px;
+
+#prev {
+    top: 40px;
+    padding-top: 50px;
 }
 
-#next {
+#nxt {
     display: block;
     justify-content: center;
     text-align: center;
-    scale: 100%;   
+    scale: 100%;
 }
-#nxt{
-  top: 40px;
-  padding-top: 50px;
+
+#nxt {
+    top: 40px;
+    padding-top: 50px;
 }
 
 #previous {
@@ -136,13 +142,17 @@ span a:hover{
     display: grid;
     grid-template-columns: 50% 50%;
 }
-.zdjecie img{
-  height: 300px;
-  width: 900px;
+
+.zdjecie img {
+    height: 300px;
+    width: 900px;
 }
+
 .dupa {
-  animation-duration: 1s;
+    animation-duration: 1s;
 }
+
+
 /* #inne {
     padding: 20px;
     text-align: center;
@@ -151,6 +161,7 @@ span a:hover{
     display: grid;
     grid-template-columns: 20% 20%;
 } */
+
 
 /* .in {
     background-color: rgb(157, 3, 3);
