--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,153 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600&display=swap');
+@import url('http://fonts.cdnfonts.com/css/pokemon-solid');
 body {
     background: linear-gradient(-45deg, #ee7752, #e73c3c, #d2d523, #d5b423);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 100vh;
 }
+
+#checkbox {
+    display: none;
+}
+
+#pikachu {
+    top: 20px;
+    position: relative;
+    z-index: 2;
+}
+
+#baner {
+    z-index: 2;
+    position: absolute;
+    display: grid;
+    top: 20px;
+    justify-content: center;
+    text-align: center;
+    padding-bottom: 20px;
+    color: red;
+    font-size: 60px;
+    font-family: 'Pokemon Solid', sans-serif;
+    text-shadow: 0 0 10px #111;
+}
+
+.pokemon {
+    padding: 0.6em 1em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 100px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.pokemon::before {
+    content: "";
+    background: linear-gradient( 45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-pokemon 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+@keyframes glowing-pokemon {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.pokemon::after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+
+/* CSS */
+
+.button-85 {
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-85:before {
+    content: "";
+    background: linear-gradient( 45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.button-85:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+
+/*--------------------------------------------------------------------------------*/
 
 @keyframes gradient {
     0% {
@@ -28,53 +171,6 @@ body {
     background: #fff;
 }
 
-#nxt {
-    position: relative;
-    display: inline-flex;
-    width: 180px;
-    height: 55px;
-    margin: 0 15px;
-    perspective: 1000px;
-}
-
-#nxt {
-    font-size: 19px;
-    letter-spacing: 1px;
-    transform-style: preserve-3d;
-    transform: translateZ(-10px);
-    transition: transform .25s;
-    font-family: 'Montserrat', sans-serif;
-}
-
-#nxt:before,
-#nxt:after {
-    position: absolute;
-    content: "next";
-    height: 55px;
-    width: 180px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 5px solid black;
-    box-sizing: border-box;
-    border-radius: 5px;
-}
-
-#nxt:before {
-    color: #fff;
-    background: #000;
-    transform: rotateY(0deg) translateZ(25px);
-}
-
-#nxt:after {
-    color: #000;
-    transform: rotateX(90deg) translateZ(25px);
-}
-
-#nxt:hover {
-    transform: translateZ(-25px) rotateX(-90deg);
-}
-
 #nav {
     margin: 0px;
     padding: 0%;
@@ -92,6 +188,7 @@ body {
 }
 
 #pokemons {
+    height: 700px;
     scale: 100%;
     padding-top: 30px;
     justify-content: center;
@@ -99,28 +196,34 @@ body {
     display: block;
 }
 
-#prev {
-    top: 40px;
-    padding-top: 50px;
+#pokemons img {
+    height: 700px;
+    z-index: 0;
 }
 
-#nxt {
+button {
+    margin: 50px;
+    top: 40px;
+    padding-top: 150px;
+    scale: 200%;
+}
+
+#next {
+    z-index: 2;
     display: block;
     justify-content: center;
     text-align: center;
     scale: 100%;
-}
-
-#nxt {
-    top: 40px;
-    padding-top: 50px;
+    padding-top: 140px;
 }
 
 #previous {
+    z-index: 2;
     display: block;
     justify-content: center;
     text-align: center;
     scale: 100%;
+    padding-top: 140px;
 }
 
 #big {
@@ -136,7 +239,6 @@ body {
     grid-row: inherit;
     display: grid;
     grid-template-columns: 50% 50%;
-<<<<<<< HEAD
 }
 
 .zdjecie img {
@@ -144,27 +246,12 @@ body {
     width: 900px;
 }
 
-.dupa {
-    animation-duration: 1s;
-}
-
-
-/* #inne {
-    padding: 20px;
+footer {
+    margin-top: 40px;
+    font-size: 25px;
+    z-index: 2;
     text-align: center;
-    justify-content: center;
-    grid-row: inherit;
-    display: grid;
-    grid-template-columns: 20% 20%;
-} */
-
-
-/* .in {
-    background-color: rgb(157, 3, 3);
-    margin: 20px;
-    border-radius: 30px;
-    border: black solid;
-} */
-=======
+    color: red;
+    font-family: 'Pokemon Solid', sans-serif;
+    text-shadow: 0 0 10px #111;
 }
->>>>>>> parent of acb450e (git)
